Interval service, Swagger, handler Exception